# Onboardify

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  middleware.ts  package-lock.json  package.json  sample.csv
app/: globals.css  layout.tsx
app/(auth)/callback/: route.ts
app/(auth)/login/: page.tsx
app/(auth)/register/: page.tsx
app/api/upload/: route.ts
app/onboarding/: page.tsx
app/onboarding/components/: completion-step.tsx  csv-upload-step.tsx  fleet-info-step.tsx  multi-select.tsx  preferences-step.tsx  success-page.tsx  vehicle-details-step.tsx
backend/: README.md  main.py  pyproject.toml  requirements.txt
components/: auth-provider.tsx
components/ui/: scroll-area.tsx
hooks/: use-mobile.ts  use-theme.ts
lib/: supabase.ts
supabase/migrations/: 20250408215111_odd_sunset.sql
